Add Spring Boot support and refactor SQL generation