@@ -4,14 +4,17 @@ import com.nicleo.kora.core.runtime.GeneratedReflector;
 import com.nicleo.kora.core.runtime.GeneratedReflectors;
 import com.nicleo.kora.core.runtime.ImmutableArrayList;
 import com.nicleo.kora.core.runtime.RowMapper;
+import com.nicleo.kora.core.runtime.DefaultSqlPagingSupport;
+import com.nicleo.kora.core.runtime.DefaultSqlGenerator;
+import com.nicleo.kora.core.runtime.DbType;
+import com.nicleo.kora.core.runtime.SqlPagingSupport;
+import com.nicleo.kora.core.runtime.SqlGenerator;
 import com.nicleo.kora.core.runtime.SqlExecutionContext;
 import com.nicleo.kora.core.runtime.SqlInterceptor;
 import com.nicleo.kora.core.runtime.SqlRequest;
 import com.nicleo.kora.core.runtime.SqlSession;
 import com.nicleo.kora.core.runtime.SqlSessionException;
 import com.nicleo.kora.core.runtime.TypeConverter;
-import com.nicleo.kora.core.util.DefaultNameConverter;
-import com.nicleo.kora.core.util.NameConverter;
 
 import javax.sql.DataSource;
 import java.sql.Connection;
@@ -21,50 +24,55 @@ import java.sql.SQLException;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
-public final class DefaultSqlSession implements SqlSession {
+public class DefaultSqlSession implements SqlSession {
     private final DataSource dataSource;
-    private final NameConverter nameConverter;
     private final TypeConverter typeConverter;
+    private SqlPagingSupport sqlPagingSupport;
+    private SqlGenerator sqlGenerator;
+    private DbType dbType;
     private final List<SqlInterceptor> interceptors;
     private final Map<CacheKey, List<?>> localCache = new ConcurrentHashMap<>();
-
+    protected Connection connection;
+    protected boolean closed;
     public DefaultSqlSession(DataSource dataSource) {
-        this(dataSource, DefaultNameConverter.INSTANCE, new TypeConverter(), List.of());
-    }
-
-    public DefaultSqlSession(DataSource dataSource, NameConverter nameConverter) {
-        this(dataSource, nameConverter, new TypeConverter(), List.of());
-    }
-
-    public DefaultSqlSession(DataSource dataSource, TypeConverter typeConverter) {
-        this(dataSource, DefaultNameConverter.INSTANCE, typeConverter, List.of());
+        this.dataSource = dataSource;
+        this.typeConverter = new TypeConverter();
+        this.sqlPagingSupport = new DefaultSqlPagingSupport();
+        this.sqlGenerator = new DefaultSqlGenerator();
+        this.dbType = DbType.MYSQL;
+        this.interceptors = new ArrayList<>();
     }
 
     public DefaultSqlSession(DataSource dataSource, SqlInterceptor... interceptors) {
-        this(dataSource, DefaultNameConverter.INSTANCE, new TypeConverter(), Arrays.asList(interceptors));
+        this(dataSource);
+        addInterceptor(interceptors);
     }
 
-    public DefaultSqlSession(DataSource dataSource, NameConverter nameConverter, SqlInterceptor... interceptors) {
-        this(dataSource, nameConverter, new TypeConverter(), Arrays.asList(interceptors));
+    public void setSqlPagingSupport(SqlPagingSupport sqlPagingSupport) {
+        this.sqlPagingSupport = sqlPagingSupport;
     }
 
-    public DefaultSqlSession(DataSource dataSource, TypeConverter typeConverter, SqlInterceptor... interceptors) {
-        this(dataSource, DefaultNameConverter.INSTANCE, typeConverter, Arrays.asList(interceptors));
+    public void setSqlGenerator(SqlGenerator sqlGenerator) {
+        this.sqlGenerator = sqlGenerator;
     }
 
-    public DefaultSqlSession(DataSource dataSource, List<SqlInterceptor> interceptors) {
-        this(dataSource, DefaultNameConverter.INSTANCE, new TypeConverter(), interceptors);
+    public void setDbType(DbType dbType) {
+        this.dbType = dbType;
     }
 
-    public DefaultSqlSession(DataSource dataSource, NameConverter nameConverter, List<SqlInterceptor> interceptors) {
-        this(dataSource, nameConverter, new TypeConverter(), interceptors);
+    public List<SqlInterceptor> getInterceptors() {
+        return interceptors;
     }
 
-    public DefaultSqlSession(DataSource dataSource, NameConverter nameConverter, TypeConverter typeConverter, List<SqlInterceptor> interceptors) {
-        this.dataSource = dataSource;
-        this.nameConverter = Objects.requireNonNull(nameConverter, "nameConverter");
-        this.typeConverter = Objects.requireNonNull(typeConverter, "typeConverter");
-        this.interceptors = List.copyOf(interceptors);
+    public void addInterceptor(SqlInterceptor... interceptors) {
+        this.interceptors.addAll(Arrays.asList(interceptors));
+    }
+    public void addInterceptor(Collection<SqlInterceptor> interceptors) {
+        this.interceptors.addAll(interceptors);
+    }
+
+    public DataSource getDataSource() {
+        return dataSource;
     }
 
     @Override
@@ -81,7 +89,7 @@ public final class DefaultSqlSession implements SqlSession {
         if (results.size() > 1) {
             throw new SqlSessionException("Expected one row but got " + results.size() + " for sql: " + sql);
         }
-        return results.get(0);
+        return results.getFirst();
     }
 
     @Override
@@ -98,7 +106,7 @@ public final class DefaultSqlSession implements SqlSession {
             return cached;
         }
         GeneratedReflector<T> reflector = GeneratedReflectors.get(resultType);
-        List<T> loaded = executeQuery(request.getSql(), request.getArgs(), new GeneratedRowMapper<>(resultType, reflector, nameConverter, typeConverter));
+        List<T> loaded = executeQuery(request.getSql(), request.getArgs(), new GeneratedRowMapper<>(resultType, reflector, typeConverter));
         localCache.put(cacheKey, loaded);
         return loaded;
     }
@@ -109,6 +117,21 @@ public final class DefaultSqlSession implements SqlSession {
     }
 
     @Override
+    public SqlPagingSupport getSqlPagingSupport() {
+        return sqlPagingSupport;
+    }
+
+    @Override
+    public DbType getDbType() {
+        return dbType;
+    }
+
+    @Override
+    public SqlGenerator getSqlGenerator() {
+        return sqlGenerator;
+    }
+
+    @Override
     public int update(String sql, Object[] args) {
         return update(sql, args, SqlExecutionContext.update(this));
     }
@@ -116,8 +139,7 @@ public final class DefaultSqlSession implements SqlSession {
     @Override
     public int update(String sql, Object[] args, SqlExecutionContext context) {
         SqlRequest request = applyInterceptors(context, new SqlRequest(sql, args));
-        try (Connection connection = dataSource.getConnection();
-             PreparedStatement statement = connection.prepareStatement(request.getSql())) {
+        try (PreparedStatement statement = currentConnection().prepareStatement(request.getSql())) {
             bindParameters(statement, request.getArgs());
             int updated = statement.executeUpdate();
             clearCache();
@@ -128,13 +150,36 @@ public final class DefaultSqlSession implements SqlSession {
     }
 
     @Override
+    public int[] executeBatch(String sql, List<Object[]> batchArgs) {
+        return executeBatch(sql, batchArgs, SqlExecutionContext.update(this));
+    }
+
+    @Override
+    public int[] executeBatch(String sql, List<Object[]> batchArgs, SqlExecutionContext context) {
+        if (batchArgs == null || batchArgs.isEmpty()) {
+            return new int[0];
+        }
+        SqlRequest request = applyInterceptors(context, new SqlRequest(sql, new Object[0]));
+        try (PreparedStatement statement = currentConnection().prepareStatement(request.getSql())) {
+            for (Object[] args : batchArgs) {
+                bindParameters(statement, args);
+                statement.addBatch();
+            }
+            int[] updated = statement.executeBatch();
+            clearCache();
+            return updated;
+        } catch (SQLException ex) {
+            throw new SqlSessionException("Failed to execute batch: " + request.getSql(), ex);
+        }
+    }
+
+    @Override
     public void clearCache() {
         localCache.clear();
     }
 
     public <T> List<T> executeQuery(String sql, Object[] args, RowMapper<T> rowMapper) {
-        try (Connection connection = dataSource.getConnection();
-             PreparedStatement statement = connection.prepareStatement(sql)) {
+        try (PreparedStatement statement = currentConnection().prepareStatement(sql)) {
             bindParameters(statement, args);
             try (ResultSet resultSet = statement.executeQuery()) {
                 var results = new ArrayList<T>();
@@ -148,6 +193,25 @@ public final class DefaultSqlSession implements SqlSession {
             }
         } catch (SQLException ex) {
             throw new SqlSessionException("Failed to execute query: " + sql, ex);
+        }
+    }
+
+    @Override
+    public synchronized void close() {
+        if (closed) {
+            return;
+        }
+        closed = true;
+        clearCache();
+        Connection current = connection;
+        connection = null;
+        if (current == null) {
+            return;
+        }
+        try {
+            releaseConnection(current);
+        } catch (SQLException ex) {
+            throw new SqlSessionException("Failed to close sql session connection", ex);
         }
     }
 
@@ -181,31 +245,45 @@ public final class DefaultSqlSession implements SqlSession {
         }
     }
 
-    private record CacheKey(String sql, Object[] args, Class<?> resultType) {
-            private CacheKey(String sql, Object[] args, Class<?> resultType) {
-                this.sql = sql;
-                this.args = args == null ? new Object[0] : args.clone();
-                this.resultType = resultType;
-            }
-
-            @Override
-            public boolean equals(Object other) {
-                if (this == other) {
-                    return true;
-                }
-                if (!(other instanceof CacheKey(String sql1, Object[] args1, Class<?> type))) {
-                    return false;
-                }
-                return Objects.equals(sql, sql1)
-                        && Arrays.deepEquals(args, args1)
-                        && Objects.equals(resultType, type);
-            }
-
-            @Override
-            public int hashCode() {
-                int result = Objects.hash(sql, resultType);
-                result = 31 * result + Arrays.deepHashCode(args);
-                return result;
-            }
+    protected synchronized Connection currentConnection() throws SQLException {
+        if (closed) {
+            throw new SqlSessionException("SqlSession is already closed");
         }
+        if (connection == null || connection.isClosed()) {
+            connection = dataSource.getConnection();
+        }
+        return connection;
+    }
+
+    protected void releaseConnection(Connection connection) throws SQLException {
+        connection.close();
+    }
+
+    private record CacheKey(String sql, Object[] args, Class<?> resultType) {
+        private CacheKey(String sql, Object[] args, Class<?> resultType) {
+            this.sql = sql;
+            this.args = args == null ? new Object[0] : args.clone();
+            this.resultType = resultType;
+        }
+
+        @Override
+        public boolean equals(Object other) {
+            if (this == other) {
+                return true;
+            }
+            if (!(other instanceof CacheKey(String sql1, Object[] args1, Class<?> type))) {
+                return false;
+            }
+            return Objects.equals(sql, sql1)
+                    && Arrays.deepEquals(args, args1)
+                    && Objects.equals(resultType, type);
+        }
+
+        @Override
+        public int hashCode() {
+            int result = Objects.hash(sql, resultType);
+            result = 31 * result + Arrays.deepHashCode(args);
+            return result;
+        }
+    }
 }
